--- a/style/style.css
+++ b/style/style.css
@@ -560,7 +560,7 @@ background-color: #bad2ea;
 
 #showmap {
   border: none;
-  background: #607D8B;
+  background: #007C91;
   color: white;
   padding: 10px 20px;
   border-radius: 10px;
