--- a/style/resturant.css
+++ b/style/resturant.css
@@ -455,7 +455,7 @@
   #post-submit {
     color: #fff;
     text-decoration: none;
-    background-color: #607D8B;
+    background-color: #007c91;
     padding: 10px;
     border-radius: 5px;
     border: none;
@@ -494,7 +494,7 @@
   }
   #restaurant-hours_container{
     padding: 30px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
   #restaurant-address {
     margin-left: 10px;
@@ -531,6 +531,8 @@
     padding: 10px;
     line-height: 1.4em;
     background-color: #00bdd930;
+    max-width: 400px;
+    width: 100%;
     min-height: 100%;
     color: #252831;
   }
@@ -540,7 +542,7 @@
 #restaurant-container {
   width: 100%;
   max-width: 1180px;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 
   #restaurant-container,
@@ -566,9 +568,11 @@
     background-color: #CFF3F8;
   }
   #restaurant-col_address {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     background-color: #fff;
     text-align: center;
+    max-width: 600px;
+    width: 100%;
     padding: 20px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -609,7 +613,7 @@
     text-transform: uppercase;
   }
   .ratings {
-    background-color: #E91E63;
+    background-color: #c50e29;
     color: white;
     padding: 7px;
     display: inline-block;
@@ -685,18 +689,32 @@
     background: none;
     border: none;
     color: #464444c7;
+    cursor: pointer;
   }
   #connectivity-message {
     display: none;
   }
   .showOfflineNotification {
-    background-color: black;
+    background-color: #b61827;
+    border-radius: 10px;
     height: auto;
     color: white;
     text-align: center;
     font-size: 20px;
     overflow: hidden;
+    max-width: 300px;
+    width: 100%;
+    display: block;
     z-index: 101;
+  }
+
+  #offline {
+    max-width: 300px;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+
+    transition: background-color 1s ease-in;
   }
   .hideOfflineNotification {
     display: none;
@@ -713,16 +731,13 @@
   /*================Rating System==========================*/
 
   .rate{
-    display: inline-block;
+   
     position: relative;
-    height: 20px;
-  
     font-size: 20px;
   }
   
   .rate label {
     position: absolute;
-    height: 100%;
     cursor: pointer;
   }
   
@@ -752,7 +767,6 @@
   
   .rate label input {
     position: absolute;
-    top: 0;
     left: 0;
     opacity: 0;
   }
@@ -768,18 +782,19 @@
   
   .rate:not(:hover) label input:checked ~ .icon,
   .rate:hover label:hover input ~ .icon {
-    color: #E91E63;
+    color: #c50e29;
   }
   
   .rate label input:focus:not(:checked) ~ .icon:last-child {
     color: #000;
-    text-shadow: 0 0 5px #E91E63;
+    text-shadow: 0 0 5px #c50e29;
   }
 
 
 
   /*================Media Queries==========================*/
   @media (min-width: 300px) {
+
     #restaurant-name {
       font-size: 1em;
     }
@@ -788,6 +803,12 @@
     }
     .heart {
       font-size: 5em;
+    }
+  }
+
+  @media (max-width: 400px) {
+    .heart {
+      bottom: 4rem !important;
     }
   }
   @media (min-width: 500px) {
